# GoofyOS

./: .gdb_history  .gitignore  GNUmakefile  Makefile  README.MD  README.md  bochsrc.bxrc  boot.asm  boot2.asm  bx_enh_dbg.ini  disk.asm  gdt.asm  goofyboot.ld  greeting.asm  kernel.c  limine.cfg  log.txt  mbr.asm  protected_mode.asm  run.bat  window-model.txt
kernel/: Cargo.toml  console.c  console.h  i386_kernel.json  kernel.c  printf.c  stdint.h  vga_video.c  vga_video.h
kernel/.cargo/: config.toml
kernel/.zig-cache/o/26853409eca09576efbdf68f25b567e0/: kernel
kernel/.zig-cache/o/2f0c7e90853e40cd5ed7d4be1668db5e/: kernel
kernel/.zig-cache/o/45f8495b2d3084d73f0c677d42490594/: kernel
kernel/.zig-cache/o/71edabe7ef81caa158281b7a72e0765a/: kernel
kernel/.zig-cache/o/724fa53bc168dc44eb707ad2876cce83/: kernel
kernel/.zig-cache/o/75dc33a51e47d154718379cd0543d640/: kernel
kernel/.zig-cache/o/7fd10df1798cf25c723236f08d3db5c5/: kernel
kernel/.zig-cache/o/8a14015186a50bdb5fb320a61fae52c5/: dependencies.zig
kernel/.zig-cache/o/b521dee4e1f4e2a874f7d0b4548e09e5/: kernel
kernel/src/: entry.asm  font.rs  font.zig  framebuffer.rs  framebuffer.zig  gdt.zig  interrupts.rs  lib.rs  main.rs  main.zig  mm.rs  terminal.rs  terminal.zig  tty.rs  vga.rs
kernel/src/arch/: x86_64.rs
kernel/src/arch/x86_64/: gdt.rs  idt.rs  pic.rs  (+2 more)
kernel/src/drivers/: framebuffer.rs
kernel/src/mm/: mapper.rs  memory.rs  page_alloc.rs  slab_alloc.rs  virtual_alloc.rs
kernel/src/panic/: handler.rs
kernel/src/tty/: font.rs  terminal.rs
kernel/src/vga/: buffer.rs  char.rs  color.rs
(+9 files in other folders)
